# Othello

./: README.md  othello.cabal
ref/: BitBoard.java
src/: #Game.hs#  .#Othello.hs  AI.hs  Bench.hs  BitBoard.hs  Game.hs  Othello.hs  Types.hs
tests/: Test.hs
