Name:                othello
Version:             0.1.0.0
Synopsis:            othello in Threepenny-gui
Homepage:            martingalemeasure.wordpress.com
License:             BSD3
License-file:        LICENSE
Author:              Reed Rosenbluth
Maintainer:          reed.rosenbluth@gmail.com
Copyright:           2014 Reed Rosenbluth
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.10

Extra-Source-Files:  README.md

Data-dir:            .
Data-files:          static/css/*.css,
                     static/images/*.png

Executable othello
  ghc-options:         -Wall
  main-is:             Othello.hs
  cpp-options:         -DCABAL
  build-depends:       base >=4.7 && <4.8,
                       threepenny-gui >= 0.5 && < 0.6,
                       array >= 0.5,
                       split >= 0.2.2 && < 0.3,
                       directory >= 1.2.1.0 && < 1.3
  hs-source-dirs:      src
  other-modules:       Types, Game, AI
  default-language:    Haskell2010