Name:                othello
Version:             0.1.0.0
Synopsis:            othello in Threepenny-gui
Homepage:            https://github.com/jeffreyrosenbluth/Othello
License:             BSD3
License-file:        LICENSE
Author:              Jeffrey Rosenbluth
Maintainer:          jeffrey.rosenbluth@gmail.com
Copyright:           2015 Jeffrey Rosenbluth
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.10

Extra-Source-Files:  README.md

Data-dir:            .
Data-files:          static/css/*.css,
                     static/images/*.png

Library
  ghc-options:         -Wall -rtsopts -O2
  exposed-modules:     Game, Types, AI
  build-depends:       base >= 4.7 && < 4.8,
                       array >= 0.5,
                       containers >= 0.5.5.1 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

Executable othello
  ghc-options:         -Wall -rtsopts -O2
  main-is:             Othello.hs
  cpp-options:         -DCABAL
  build-depends:       base >= 4.7 && < 4.8,
                       threepenny-gui >= 0.5 && < 0.6,
                       array >= 0.5,
                       split >= 0.2.2 && < 0.3,
                       directory >= 1.2.1.0 && < 1.3,
                       containers
  hs-source-dirs:      src
  other-modules:       Types, Game, AI
  default-language:    Haskell2010

Test-suite test
  ghc-options:         -Wall -rtsopts -O2
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 4.8,
                       MonadRandom >= 0.3.0.1 && < 0.4,
                       othello
  hs-source-dirs:      tests
  default-language:    Haskell2010